<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/def">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/exitButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@drawable/exit"
            android:layout_margin="10dip"/>

    </GridLayout>


    <Button
        android:id="@+id/buttonAS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addition_and_subtraction"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginTop="50dip"
        android:layout_margin="10dip"/>

    <Button
        android:id="@+id/buttonM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="10dip"/>

    <Button
        android:id="@+id/buttonD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_margin="10dip"/>

</GridLayout>