<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.additionAndSubtraction.AdditionAndSubtraction"
    android:background="@drawable/def">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="40dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:background="@drawable/rounded_button">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/rounded_white">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:text="@string/min_value_text"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />


                    <EditText
                        android:id="@+id/minValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:inputType="number"
                        android:text="@string/min_value"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_column="0"
                        android:text="@string/max_value_text"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />

                    <EditText
                        android:id="@+id/maxValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="3"
                        android:layout_column="0"
                        android:inputType="number"
                        android:text="@string/max_value"
                        android:textAlignment="center"
                        android:gravity="center_horizontal" />

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="4"
                        android:layout_column="0"
                        android:textAlignment="center"
                        android:text="@string/game_on_the_time"
                        android:gravity="center_horizontal" />

                </GridLayout>
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="40dp">

            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:background="@drawable/rounded_button"
                android:text="@string/start"/>

            </GridLayout>
        </GridLayout>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

